<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:clickable="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/wakeup_button"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme"
        android:onClick="calculateWakeup"
        android:text="@string/wakeup_button"
        android:textAllCaps="false"
        android:textColor="@color/navy_prim_dark"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_baseline_wb_sunny_24"
        android:paddingEnd="25dp"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bed_now" />

    <TextView
        android:id="@+id/bed_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/acme"
        android:text="@string/bed_now"
        android:textColor="@color/lightgray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bedtime_button" />

    <Button
        android:id="@+id/bedtime_button"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme"
        android:onClick="calculateBedtime"
        android:text="@string/bedtime_button"
        android:textAllCaps="false"
        android:textColor="@color/navy_prim_dark"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_baseline_nights_stay_24"
        android:paddingEnd="45dp"
        android:paddingStart="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <TextView
        android:id="@+id/wakeup_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/acme"
        android:text="@string/wakeup_when"
        android:textColor="@color/lightgray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/acme"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="266dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/time_picker_background"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_when" />

</androidx.constraintlayout.widget.ConstraintLayout>