<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_prim_dark"
    tools:context=".Bedtime">

    <Button
        android:id="@+id/setAlarm"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme"
        android:text="@string/alarm"
        android:textAllCaps="false"
        android:textColor="@color/navy_prim_dark"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_outline_alarm_24"
        android:paddingEnd="75dp"
        android:paddingStart="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/good_sleep" />

    <TextView
        android:id="@+id/cycles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/bedtime_cycles"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time5" />

    <TextView
        android:id="@+id/fall_asleep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/fall_asleep"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <TextView
        android:id="@+id/good_sleep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/good_sleep"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycles" />

    <TextView
        android:id="@+id/time6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time3" />

    <TextView
        android:id="@+id/time5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/time3"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/time1"
        app:layout_constraintTop_toBottomOf="@+id/time2" />

    <TextView
        android:id="@+id/time4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1" />

    <TextView
        android:id="@+id/time3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_message" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/time3"
        app:layout_constraintStart_toEndOf="@+id/time1"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_message" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/acme"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/wakeup_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/bedtime_message"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fall_asleep" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/acme"
        android:text="@string/empty"
        android:textColor="@color/navy_prim_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_message" />

</androidx.constraintlayout.widget.ConstraintLayout>